# prism

./: .env.example  .gitignore  AGENTS.md  DESIGN.md  Makefile  Prism_Claude_Code_Prompt_Book.md  Prism_Executive_Implementation_Plan.docx  Prism_Frontend_Design.jsx  Prism_Technical_Implementation_Spec.md  README.md  docker-compose.yml
.claude/: settings.json
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  dependencies.py  logging_config.py  main.py  seed.py
backend/app/api/v1/: __init__.py  blast_radius.py  compliance.py  connectors.py  copilot.py  cpt.py  documents.py  entities.py  health.py  reports.py  search.py  topology.py
backend/app/connectors/: base.py  mock_engine.py  registry.py
backend/app/cpt/: __init__.py  convergence.py  fingerprint.py  models.py  truth_resolver.py
backend/app/cpt/documents/: __init__.py  enrichment.py  extractor.py  models.py  parser.py  store.py
backend/app/graph/: __init__.py  algorithms.py  client.py  queries.py  schema.py  vector_search.py
backend/app/intelligence/: llm_router.py
backend/app/intelligence/copilot/: __init__.py  agent.py  memory.py  prompts.py  tools.py
backend/app/middleware/: tenant.py
backend/tests/: conftest.py  test_health.py  test_integration.py
backend/tests/cpt/: test_convergence.py  test_models.py  test_truth_resolver.py
docs/: EXPANSION_BUSINESS_TOOLS.md  PRODUCTION_READINESS_CHECKLIST.md  Prism_Executive_Plan_v2_Advanced.docx  prims.pptx
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
(+40 files in other folders)
